# LLaMEA-BO

./: .env.template  .gitignore  .mypy.ini  .pylintrc  README.md  README_BO.md  example2.py  example_algo_evaluation.py  example_bo.py  example_es_search.py  pyproject.toml  run_algo_evaluation.py  run_algo_evaluation.sh  run_es_search.py  run_es_search.sh
Benchmarks/: Readme.md  hpo_ioh_results_0421.csv  llambo_benchmark_d5.job  llambo_benchmark_das5.job  run_bayesmark.py  run_hpo_bench.py
Experiments/: bo_exp.py  ea_bo_algo_exp.py  ea_bo_exp.py  ea_llm_exp.py  plot.py  plot_algo_res.py  plot_search_res.py  test_bo.py  test_bo_candidates.py
Experiments/baselines/: bo_baseline.py  vanilla_bo.py
Experiments/bbob_test_res/: fail_excute_res.md  successful_bl.md  successful_heavy_res.md  successful_heheavy_res.md  successful_light_res.md  successful_light_res1.md  successful_light_res2.md
Experiments/jobs/: bo_algo_eval_das6.job  bo_algo_eval_mpi_d5.job  bo_algo_eval_mpi_d6.job  bo_algo_eval_mpi_das5.job  bo_algo_eval_mpi_das6.job  bo_evol_mpi_d5.job  bo_evol_mpi_d6.job  bo_evol_mpi_das5.job  bo_evol_mpi_das6.job  (+2 more)
llambo/: __init__.py  llambo.py  llm.py  utils.py
llamea/: __init__.py  evaluator.py  individual.py  llambo.py  llamea.py  llm.py  promptGenerator.py  utils.py
llamevol/: __init__.py  individual.py  llamevol.py  llm.py  utils.py
logs/: bbob_simple_100_0114130651.pkl  bo_exp_p1_all_0106031146.pkl  exp_bbob_simple_100_0113112724.pkl  p2_individual_set_0106053038.pkl  reader_format_bo_exp_p2_set_0106053039.json
misc/: iohrun.py  plot_aucs.py  utils.py
(+1279 files in other folders)
